align root title and sync changes in the mock api

--- a/api_tests/web/root.html
+++ b/api_tests/web/root.html
@@ -21,11 +21,14 @@
 
     /* Header styling */
     h1 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
       background-color: #6200ea;
       color: #fff;
       margin: 0;
       padding: 20px;
-      text-align: center;
       font-size: 1.8rem;
     }
 
@@ -123,6 +126,17 @@
       border-radius: 8px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     }
+
+    .datetime {
+      position: absolute;
+      right: 20px;
+      font-size: 1rem;
+      color: #fff;
+    }
+
+    #title {
+      text-align: center;
+    }
   </style>
   <script>
     async function updateStatus() {
@@ -130,8 +144,17 @@
         const response = await fetch('/data');
         const data = await response.json();
         console.log(data.deviceId);
+        const epochTime = data.NTP;
+        if (epochTime) {
+          const date = new Date(epochTime * 1000);
+          const formattedTime = date.toLocaleTimeString('en-GB', { hour: '2-digit', minute: '2-digit', second: '2-digit' });
+          const formattedDate = date.toLocaleDateString('en-GB');
+          document.getElementById('dateTime').innerText = `${formattedTime} ${formattedDate}`;
+        }
+        console.log(epochTime);
         document.getElementById('deviceId').innerText = data.deviceId;
         document.title = data.deviceId + " Device Status";
+
         // Update MQTT connection status
         document.getElementById('mqttStatus').className = data.mqttConnected ? 'led high' : 'led low';
         document.getElementById('mqttText').innerText = data.mqttConnected ? 'Connected' : 'Disconnected';
@@ -163,18 +186,30 @@
           }
         });
 
+        if (digitalList.childElementCount === 0) {
+          digitalList.parentElement.style.display = 'none';
+        } else {
+          digitalList.parentElement.style.display = 'block';
+        }
+
         const outputList = document.getElementById('outputs');
         outputList.innerHTML = '';
         Object.keys(data.outputs).forEach(pin => {
-            const li = document.createElement('li');
-            const led = document.createElement('span');
-            led.className = data.outputs[pin] ? 'led high' : 'led low';
-            li.appendChild(document.createTextNode(`${pin}`));
-            li.appendChild(led);
-            const val = data.outputs[pin] ? "ON" : "OFF";
-            li.appendChild(document.createTextNode(`${val}`));
-            outputList.appendChild(li);
+          const li = document.createElement('li');
+          const led = document.createElement('span');
+          led.className = data.outputs[pin] ? 'led high' : 'led low';
+          li.appendChild(document.createTextNode(`${pin}`));
+          li.appendChild(led);
+          const val = data.outputs[pin] ? "ON" : "OFF";
+          li.appendChild(document.createTextNode(`${val}`));
+          outputList.appendChild(li);
         });
+
+        if (analogList.childElementCount === 0) {
+          analogList.parentElement.style.display = 'none';
+        } else {
+          analogList.parentElement.style.display = 'block';
+        }
 
       } catch (error) {
         console.error('Error updating status:', error);
@@ -187,7 +222,10 @@
 </head>
 
 <body>
-  <h1><span id="deviceId">Opta</span> Device Status</h1>
+  <h1> <span id="title"><span id="deviceId">Opta</span> Device Status</span>
+    <span id="dateTime" class="datetime"></span>
+  </h1>
+
   <div class="status">
     <h2>MQTT Connection:</h2>
     <p>
